Add margin to filter input

--- a/css/list.css
+++ b/css/list.css
@@ -15,6 +15,10 @@ header a {
 	text-decoration: none;
 }
 
+header input {
+	margin: 2px 0px;
+}
+
 #list {
 	margin: 0.2em 0.4em;
 	border: 2px solid #333;
